Fixed card grid spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -232,6 +232,7 @@ select option {
 	position: relative;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
+	grid-auto-rows: 200px;
 	grid-gap: 3px;
 	overflow-y: scroll;
 	flex-grow: 1;
